# Session-Based-Recommendation-System

./: .gitignore  .pre-commit-config.yaml  0326.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: default.yaml
notebooks/: session_rec_analysis.ipynb
results/: model_configs.yaml
scripts/: demo.py  train.py
src/session_rec/: __init__.py  data.py  evaluation.py  models.py  utils.py
tests/: test_session_rec.py
